# multipanda_ros2

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
franka_control2/: CMakeLists.txt  package.xml
franka_control2/src/: franka_control2_node.cpp
franka_hardware/: CMakeLists.txt  franka_hardware.xml  param_setter_scripts.sh
franka_hardware/include/franka_hardware/: franka_error_recovery_service_server.hpp  franka_hardware_interface.hpp  franka_mujoco_hardware_interface.hpp  franka_mujoco_multi_hardware_interface.hpp  franka_multi_hardware_interface.hpp  franka_param_service_server.hpp  garmi_head_sim.hpp  garmi_mujoco_hardware_interface.hpp  gripper_sim_action_server.hpp  helper_functions.hpp  mobile_base_sim.hpp  model.hpp  model_base.hpp  model_franka.hpp  model_sim.hpp  mujoco_pose_service.hpp  mujoco_visualizer.hpp  robot.hpp  robot_sim.hpp
franka_hardware/src/: control_mode.cpp  franka_error_recovery_service_server.cpp  franka_hardware_interface.cpp  franka_mujoco_hardware_interface.cpp  franka_mujoco_multi_hardware_interface.cpp  franka_multi_hardware_interface.cpp  franka_param_service_server.cpp  garmi_head_sim.cpp  garmi_mujoco_hardware_interface.cpp  gripper_sim_action_server.cpp  helper_functions.cpp  mobile_base_sim.cpp  robot.cpp  robot_sim.cpp
franka_mj_hardware/: CMakeLists.txt  package.xml  plugins.xml
franka_mj_hardware/include/franka_mj_hardware/: control_mode.h  franka_mj_hardware_system.hpp  helper_functions.hpp  model_base.hpp  model_sim.hpp  robot_sim.hpp
franka_mj_hardware/src/: control_mode.cpp  franka_executor.cpp  franka_mj_hardware_system.cpp  gripper_sim_action_server.cpp  helper_functions.cpp  robot_sim.cpp
franka_msgs/: CMakeLists.txt
franka_msgs/msg/: FrankaModel.msg  FrankaState.msg  PoseStampedArray.msg
franka_msgs/srv/: ErrorRecovery.srv  SetMujocoPoses.srv
franka_multi_mode_controller/multi_mode_control_msgs/: CMakeLists.txt  package.xml
franka_multi_mode_controller/multi_mode_control_msgs/msg/: CartesianImpedanceGoal.msg  ContactThresholds.msg  Controller.msg  DualCartesianImpedanceGoal.msg  JointArray.msg  JointGoal.msg  VelocityGoal.msg  Wrench.msg
franka_multi_mode_controller/multi_mode_control_msgs/srv/: GetControllers.srv  GetRobotStates.srv  SetCartesianImpedance.srv  SetControllers.srv  SetJointImpedance.srv  SetRecoveryMode.srv  SetReflex.srv  SetThresholds.srv  SetWorldState.srv
franka_multi_mode_controller/multi_mode_controller/: CMakeLists.txt  package.xml
franka_multi_mode_controller/multi_mode_controller/include/multi_mode_controller/base/: panda_controller_base.h  panda_controller_interface.h  panda_controller_ros_interface.h  switch_engine.h  switch_engine_interface.h
franka_multi_mode_controller/multi_mode_controller/include/multi_mode_controller/controllers/: comless_coupled_dual_cartesian_impedance_controller.h  comless_dual_cartesian_impedance_controller.h  comless_dual_joint_impedance_controller.h  comless_panda_cartesian_impedance_controller.h  comless_panda_joint_impedance_controller.h  des_coupled_dual_cartesian_impedance_controller.h  dual_cartesian_impedance_controller.h  panda_cartesian_impedance_controller.h  panda_joint_impedance_controller.h  panda_joint_velocity_controller.h  twin_cartesian_impedance_controller.h  twin_joint_impedance_controller.h
franka_multi_mode_controller/multi_mode_controller/include/multi_mode_controller/utils/: buffered.h  controller_factory.h  conversions.h  damping_design.h  factory.h  get_robot_state_msg.h  nullspace_projection.h  panda_limits.h  redundancy_resolution.h  robot_data.h  sync_service_client.hpp  synchronous_client.h  type_name.h
franka_multi_mode_controller/multi_mode_controller/src/: comless_coupled_dual_cartesian_impedance_controller.cpp  comless_dual_cartesian_impedance_controller.cpp  comless_dual_joint_impedance_controller.cpp  comless_panda_cartesian_impedance_controller.cpp  comless_panda_joint_impedance_controller.cpp  controller_factory.cpp  des_coupled_dual_cartesian_impedance_controller.cpp  dual_cartesian_impedance_controller.cpp  openGJK.c  panda_cartesian_impedance_controller.cpp  panda_joint_impedance_controller.cpp  panda_joint_velocity_controller.cpp  redundancy_resolution.cpp  robot_data.cpp  synchronous_client.cpp  twin_cartesian_impedance_controller.cpp  twin_joint_impedance_controller.cpp
franka_multi_mode_controller/multi_mode_controller_impl/: CMakeLists.txt  multi_mode_controllers.xml  package.xml
franka_multi_mode_controller/multi_mode_controller_impl/include/multi_mode_controller_impl/: single_multi_mode_controller.h
franka_multi_mode_controller/multi_mode_controller_impl/src/: single_multi_mode_controller.cpp
franka_multi_mode_controller/panda_motion_generators/: CMakeLists.txt  Felix_README.md  package.xml
franka_multi_mode_controller/panda_motion_generators/include/panda_motion_generators/base/: motion_generator_base.h  (+5 more)
franka_multi_mode_controller/panda_motion_generators/src/: panda_dq_c1_cartesian_motion_generator.cpp  panda_dq_c1_cartesian_motion_generator_client.cpp  panda_dq_c1_cartesian_motion_generator_node.cpp  panda_poly_c2_joint_motion_generator.cpp  panda_poly_c2_joint_motion_generator_client.cpp  panda_poly_c2_joint_motion_generator_node.cpp  panda_to_init_pose_client.cpp
franka_robot_state_broadcaster/: CMakeLists.txt  franka_robot_state_broadcaster.xml  package.xml
franka_robot_state_broadcaster/include/franka_robot_state_broadcaster/: franka_robot_model_broadcaster.hpp  franka_robot_state_broadcaster.hpp
franka_robot_state_broadcaster/src/: franka_robot_model_broadcaster.cpp  franka_robot_state_broadcaster.cpp
franka_semantic_components/: CMakeLists.txt  package.xml
franka_semantic_components/include/franka_semantic_components/: franka_robot_model.hpp  franka_robot_state.hpp
franka_semantic_components/src/: franka_robot_model.cpp  franka_robot_state.cpp
garmi_controllers/: CMakeLists.txt  garmi_controllers.xml  package.xml
garmi_controllers/include/garmi_controllers/: mobile_base_controller.hpp
garmi_controllers/src/: mobile_base_controller.cpp
(+127 files in other folders)
