<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_robot_state_broadcaster</name>
  <version>0.0.1</version>
  <description>Broadcaster to publish FrankaState</description>
  <maintainer email="s.bien@tum.de">Seongjin Bien</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>franka_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
