<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_mode_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.bien@tum.de">bimanual</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>multi_mode_control_msgs</depend>
  <depend>franka_hardware</depend>
  <depend>franka_semantic_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
